# tauri-svelte

./: package.json  pnpm-lock.yaml  tailwind.config.js
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: main.rs  spotlight.rs
src/lib/: openai.ts  text.store.ts  utils.ts
src/lib/components/ui/: Chat.svelte  ChatMessage.svelte  NewConversation.svelte  SelectConversation.svelte  SelectModel.svelte  Settings.svelte  TextInput.svelte
src/lib/components/ui/alert/: alert-description.svelte
src/lib/components/ui/dialog/: dialog-content.svelte
src/lib/components/ui/select/: select-item.svelte  select-trigger.svelte
src/lib/components/ui/textarea/: textarea.svelte
src/routes/: +layout.svelte  +page.svelte  Counter.svelte
