[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.16", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta.16", features = [ "macos-private-api", "tray-icon", "image-png"] }
bitflags = "2.4.1"
window-vibrancy = "0.4.0"
raw-window-handle = "0.5.2"
tauri-plugin-clipboard-manager = "2.1.0-beta.2"
tauri-plugin-shell = "2.0.0-beta.5"


[target."cfg(target_os = \"macos\")".dependencies]
core-graphics = { version = "0.23" }
core-foundation = { version = "0.9.3" }
cocoa = { version = "0.25" }
objc = { version = "0.2.7" }
objc_id = { version = "0.1.1" }
objc-foundation = { version = "0.1.1" }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }


[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.0-beta.4"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
